--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -2,5 +2,7 @@
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
 	"wilderness": "Wilderness",
 	"ftbchunks.no_server_mod": "FTB Chunks requires mod on server!",
-	"ftbchunks.already_claimed": "Chunk is already claimed by %s"
+	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
+	"ftbchunks.gui.claimed": "Claimed: %d / %d",
+	"ftbchunks.gui.force_loaded": "Force loaded: %d / %d"
 }
