--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -3,6 +3,7 @@
 	"wilderness": "Wilderness",
 	"ftbchunks.no_server_mod": "FTB Chunks requires mod on server!",
 	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
-	"ftbchunks.gui.claimed": "Claimed: %d / %d",
-	"ftbchunks.gui.force_loaded": "Force loaded: %d / %d"
+	"ftbchunks.gui.claimed": "Claimed",
+	"ftbchunks.gui.force_loaded": "Force loaded",
+	"ftbchunks.gui.allies": "Allies"
 }
