--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -5,5 +5,7 @@
 	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
 	"ftbchunks.gui.claimed": "Claimed",
 	"ftbchunks.gui.force_loaded": "Force loaded",
-	"ftbchunks.gui.allies": "Allies"
+	"ftbchunks.gui.allies": "Allies",
+	"ftbchunks.gui.ally_whitelist": "Ally Whitelist",
+	"ftbchunks.gui.ally_blacklist": "Ally Blacklist"
 }
