Added large map

--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -7,5 +7,9 @@
 	"ftbchunks.gui.force_loaded": "Force loaded",
 	"ftbchunks.gui.allies": "Allies",
 	"ftbchunks.gui.ally_whitelist": "Ally Whitelist",
-	"ftbchunks.gui.ally_blacklist": "Ally Blacklist"
+	"ftbchunks.gui.ally_blacklist": "Ally Blacklist",
+	"ftbchunks.gui.large_map": "Large Map",
+	"ftbchunks.gui.claimed_chunks": "Claimed Chunks",
+	"ftbchunks.gui.waypoints": "Waypoints",
+	"ftbchunks.gui.settings": "Settings"
 }
