Improved performance, added more configs

--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -8,6 +8,7 @@
 	"ftbchunks.minimap_xyz": "Minimap XYZ",
 	"ftbchunks.minimap_biome": "Minimap Biome",
 	"ftbchunks.minimap_blur": "Minimap Blur",
+	"ftbchunks.minimap_compass": "Minimap Compass",
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
 	"key.ftbchunks.map": "Open FTB Chunks Map",
 	"wilderness": "Wilderness",
