Added entity radar

--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -3,8 +3,12 @@
 	"ftbchunks.noise": "Noise",
 	"ftbchunks.minimap": "Minimap",
 	"ftbchunks.minimap_scale": "Minimap Scale",
+	"ftbchunks.minimap_circle": "Minimap Circle",
 	"ftbchunks.minimap_waypoints": "Minimap Waypoints",
+	"ftbchunks.minimap_entities": "Minimap Entities",
+	"ftbchunks.minimap_entity_heads": "Minimap Entity Heads",
 	"ftbchunks.minimap_player_heads": "Minimap Player Heads",
+	"ftbchunks.minimap_large_entities": "Minimap Large Entities",
 	"ftbchunks.minimap_xyz": "Minimap XYZ",
 	"ftbchunks.minimap_biome": "Minimap Biome",
 	"ftbchunks.minimap_blur": "Minimap Blur",
