--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -26,5 +26,6 @@
 	"ftbchunks.gui.large_map": "Large Map",
 	"ftbchunks.gui.claimed_chunks": "Claimed Chunks",
 	"ftbchunks.gui.waypoints": "Waypoints",
+	"ftbchunks.gui.add_waypoint": "Add Waypoint",
 	"ftbchunks.gui.settings": "Settings"
 }
