Implemented map sharing, fixed license being in wrong place for 1.16.2 (but it most likely won't work anyway)

--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -33,5 +33,5 @@
 	"ftbchunks.gui.waypoints": "Waypoints",
 	"ftbchunks.gui.add_waypoint": "Add Waypoint",
 	"ftbchunks.gui.settings": "Settings",
-	"ftbchunks.gui.sync": "Sync with Allies"
+	"ftbchunks.gui.sync": "Share Map with Allies"
 }
