Bugfixes, Added BOP integration (block colors), claim dimension blacklist, claimed chunk rendering directly on map

--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -6,6 +6,8 @@
 	"ftbchunks.reduced_color_palette": "Reduced Color Palette",
 	"ftbchunks.saturation": "Saturation",
 	"ftbchunks.debug_info": "Debug Info",
+	"ftbchunks.claimed_chunks_on_map": "Show claimed chunks on map",
+	"ftbchunks.own_claimed_chunks_on_map": "Show your own claimed chunks on map",
 	"ftbchunks.minimap": "Minimap",
 	"ftbchunks.minimap_scale": "Minimap Scale",
 	"ftbchunks.minimap_locked_north": "Minimap Locked North",
@@ -18,6 +20,8 @@
 	"ftbchunks.minimap_biome": "Minimap Biome",
 	"ftbchunks.minimap_blur": "Minimap Blur",
 	"ftbchunks.minimap_compass": "Minimap Compass",
+	"ftbchunks.minimap_visibility": "Minimap Visibility",
+	"ftbchunks.minimap_zone": "Minimap Zone",
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
 	"key.ftbchunks.map": "Open FTB Chunks Map",
 	"wilderness": "Wilderness",
