--- a/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -2,26 +2,27 @@
 	"ftbchunks": "FTB Chunks",
 	"ftbchunks.noise": "Noise",
 	"ftbchunks.shadows": "Shadows",
-	"ftbchunks.chunk_grid": "Chunk Grid",
-	"ftbchunks.reduced_color_palette": "Reduced Color Palette",
+	"ftbchunks.chunk_grid": "Chunk grid",
+	"ftbchunks.reduced_color_palette": "Reduced color palette",
 	"ftbchunks.saturation": "Saturation",
 	"ftbchunks.debug_info": "Debug Info",
 	"ftbchunks.claimed_chunks_on_map": "Show claimed chunks on map",
 	"ftbchunks.own_claimed_chunks_on_map": "Show your own claimed chunks on map",
+	"ftbchunks.in_world_waypoints": "Show waypoints in world",
 	"ftbchunks.minimap": "Minimap",
-	"ftbchunks.minimap_scale": "Minimap Scale",
-	"ftbchunks.minimap_locked_north": "Minimap Locked North",
-	"ftbchunks.minimap_waypoints": "Minimap Waypoints",
-	"ftbchunks.minimap_entities": "Minimap Entities",
-	"ftbchunks.minimap_entity_heads": "Minimap Entity Heads",
-	"ftbchunks.minimap_player_heads": "Minimap Player Heads",
-	"ftbchunks.minimap_large_entities": "Minimap Large Entities",
+	"ftbchunks.minimap_scale": "Minimap scale",
+	"ftbchunks.minimap_locked_north": "Minimap locked north",
+	"ftbchunks.minimap_waypoints": "Minimap waypoints",
+	"ftbchunks.minimap_entities": "Minimap entities",
+	"ftbchunks.minimap_entity_heads": "Minimap entity heads",
+	"ftbchunks.minimap_player_heads": "Minimap player heads",
+	"ftbchunks.minimap_large_entities": "Minimap large entities",
 	"ftbchunks.minimap_xyz": "Minimap XYZ",
-	"ftbchunks.minimap_biome": "Minimap Biome",
-	"ftbchunks.minimap_blur": "Minimap Blur",
-	"ftbchunks.minimap_compass": "Minimap Compass",
-	"ftbchunks.minimap_visibility": "Minimap Visibility",
-	"ftbchunks.minimap_zone": "Minimap Zone",
+	"ftbchunks.minimap_biome": "Minimap biome",
+	"ftbchunks.minimap_blur": "Minimap blur",
+	"ftbchunks.minimap_compass": "Minimap compass",
+	"ftbchunks.minimap_visibility": "Minimap visibility",
+	"ftbchunks.minimap_zone": "Minimap zone",
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
 	"key.ftbchunks.map": "Open FTB Chunks Map",
 	"wilderness": "Wilderness",
@@ -30,8 +31,8 @@
 	"ftbchunks.gui.claimed": "Claimed",
 	"ftbchunks.gui.force_loaded": "Force loaded",
 	"ftbchunks.gui.allies": "Allies",
-	"ftbchunks.gui.ally_whitelist": "Ally Whitelist",
-	"ftbchunks.gui.ally_blacklist": "Ally Blacklist",
+	"ftbchunks.gui.ally_whitelist": "Ally whitelist",
+	"ftbchunks.gui.ally_blacklist": "Ally blacklist",
 	"ftbchunks.gui.large_map": "Large Map",
 	"ftbchunks.gui.claimed_chunks": "Claimed Chunks",
 	"ftbchunks.gui.waypoints": "Waypoints",
