Added dedicated config to enable/disable minimap. Added Ctrl+M shortcut to toggle minimap

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -22,8 +22,8 @@
 	"ftbchunks.biome_blend.blend_15x15": "Blend 15x15 (Slowest)",
 	"ftbchunks.water_height_factor": "Water weight factor",
 	"ftbchunks.minimap": "Minimap",
+	"ftbchunks.minimap.enabled": "Enabled",
 	"ftbchunks.minimap.position": "Position",
-	"ftbchunks.minimap.position.disabled": "Disabled",
 	"ftbchunks.minimap.position.bottom_left": "Bottom Left",
 	"ftbchunks.minimap.position.left": "Left",
 	"ftbchunks.minimap.position.top_left": "Top Left",
