--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -45,6 +45,8 @@
 	"ftbchunks.minimap.zone": "Zone",
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
 	"key.ftbchunks.map": "Open FTB Chunks Map",
+	"key.ftbchunks.minimap.zoomIn": "Zoom In",
+	"key.ftbchunks.minimap.zoomOut": "Zoom Out",
 	"wilderness": "Wilderness",
 	"ftbchunks.no_server_mod": "FTB Chunks requires mod on server!",
 	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
