Added missing lang keys

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -37,6 +37,7 @@
 	"ftbchunks.minimap.entity_heads": "Entity heads",
 	"ftbchunks.minimap.player_heads": "Player heads",
 	"ftbchunks.minimap.large_entities": "Large entities",
+	"ftbchunks.minimap.zoom": "Zoom",
 	"ftbchunks.minimap.xyz": "XYZ",
 	"ftbchunks.minimap.biome": "Biome",
 	"ftbchunks.minimap.blur": "Blur",
@@ -45,8 +46,8 @@
 	"ftbchunks.minimap.zone": "Zone",
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
 	"key.ftbchunks.map": "Open FTB Chunks Map",
-	"key.ftbchunks.minimap.zoomIn": "Zoom In",
-	"key.ftbchunks.minimap.zoomOut": "Zoom Out",
+	"key.ftbchunks.minimap.zoomIn": "FTB Chunks Zoom In",
+	"key.ftbchunks.minimap.zoomOut": "FTB Chunks Zoom Out",
 	"wilderness": "Wilderness",
 	"ftbchunks.no_server_mod": "FTB Chunks requires mod on server!",
 	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
