--- a/common/src/main/resources/assets/ftbchunks/lang/fr_fr.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/fr_fr.json
@@ -3,7 +3,7 @@
 	"ftbchunks.noise": "Brouillage",
 	"ftbchunks.shadows": "Ombres",
 	"ftbchunks.chunk_grid": "Quadrillage",
-	"ftbchunks.reduced_color_palette": "Plaette de couleurs réduite",
+	"ftbchunks.reduced_color_palette": "Palette de couleurs réduite",
 	"ftbchunks.saturation": "Saturation",
 	"ftbchunks.debug_info": "Infos de débug",
 	"ftbchunks.claimed_chunks_on_map": "Montrer les chunks revendiqués sur la carte",
