feat: resolved ftb-mods-issues#417 add offset to compass

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -27,6 +27,10 @@
 	"ftbchunks.minimap": "Minimap",
 	"ftbchunks.minimap.enabled": "Enabled",
 	"ftbchunks.minimap.position": "Position",
+	"ftbchunks.minimap.position_offset_x": "Position Offset X",
+	"ftbchunks.minimap.position_offset_y": "Position Offset Y",
+	"ftbchunks.minimap.position_offset_condition": "Position Offset condition",
+	"ftbchunks.minimap.position.none": "None",
 	"ftbchunks.minimap.position.bottom_left": "Bottom Left",
 	"ftbchunks.minimap.position.left": "Left",
 	"ftbchunks.minimap.position.top_left": "Top Left",
