--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -69,6 +69,7 @@
 	"ftbchunks.gui.settings": "Settings",
 	"ftbchunks.gui.sync": "Share Map with Allies",
 	"ftbteamsconfig.ftbchunks.allow_fake_players": "Allow Fake Players",
+	"ftbteamsconfig.ftbchunks.allow_explosions": "Allow Explosions",
 	"ftbteamsconfig.ftbchunks.block_edit_mode": "Block Edit Mode",
 	"ftbteamsconfig.ftbchunks.block_interact_mode": "Block Interact Mode",
 	"ftbteamsconfig.ftbchunks.minimap_mode": "Minimap Mode",
