--- a/common/src/main/resources/assets/ftbchunks/lang/zh_cn.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/zh_cn.json
@@ -1,45 +1,81 @@
 {
-	"ftbchunks": "FTB区块声明",
+	"ftbchunks": "FTB 区块声明",
 	"ftbchunks.noise": "噪点",
 	"ftbchunks.shadows": "阴影",
-	"ftbchunks.chunk_grid": "区块边界",
+	"ftbchunks.chunk_grid": "区块网格",
 	"ftbchunks.reduced_color_palette": "简化色板",
 	"ftbchunks.saturation": "饱和度",
 	"ftbchunks.debug_info": "调试信息",
 	"ftbchunks.claimed_chunks_on_map": "在地图上显示声明的区块",
 	"ftbchunks.own_claimed_chunks_on_map": "在地图上显示你自己声明的区块",
-	"ftbchunks.in_world_waypoints": "在世界上显示路径点",
-	"ftbchunks.death_waypoints": "死亡时创建死亡路径点",
+	"ftbchunks.in_world_waypoints": "显示世界中的路径点",
+	"ftbchunks.death_waypoints": "在死亡时创建死亡路径点",
 	"ftbchunks.map_mode": "地图模式",
-	"ftbchunks.water_height_factor": "水面权重系数",
-	"ftbchunks.minimap": "小地图位置",
-	"ftbchunks.minimap_scale": "小地图比例",
-	"ftbchunks.minimap_locked_north": "小地图锁定北方",
-	"ftbchunks.minimap_waypoints": "小地图路径点",
-	"ftbchunks.minimap_entities": "小地图实体",
-	"ftbchunks.minimap_entity_heads": "小地图实体图标",
-	"ftbchunks.minimap_player_heads": "小地图玩家图标",
-	"ftbchunks.minimap_large_entities": "小地图大型实体",
-	"ftbchunks.minimap_xyz": "小地图XYZ",
-	"ftbchunks.minimap_biome": "小地图生物群系",
-	"ftbchunks.minimap_blur": "小地图锐化",
-	"ftbchunks.minimap_compass": "小地图指南针",
-	"ftbchunks.minimap_visibility": "小地图透明度",
-	"ftbchunks.minimap_zone": "小地图zone",
-	"sidebar_button.ftbchunks.chunks": "FTB区块声明",
-	"key.ftbchunks.map": "打开FTB区块声明地图",
+	"ftbchunks.waypoint_fade_distance": "路径点消失距离",
+	"ftbchunks.biome_blend": "生物群系混合",
+	"ftbchunks.biome_blend.none": "无 (最快)",
+	"ftbchunks.biome_blend.blend_3x3": "混合 3x3",
+	"ftbchunks.biome_blend.blend_5x5": "混合 5x5",
+	"ftbchunks.biome_blend.blend_7x7": "混合 7x7",
+	"ftbchunks.biome_blend.blend_9x9": "混合 9x9",
+	"ftbchunks.biome_blend.blend_11x11": "混合 11x11",
+	"ftbchunks.biome_blend.blend_13x13": "混合 13x13",
+	"ftbchunks.biome_blend.blend_15x15": "混合 15x15 (最慢)",
+	"ftbchunks.water_height_factor": "水深系数",
+	"ftbchunks.only_surface_entities": "仅地表实体",
+	"ftbchunks.experimental_performance_improvement": "实验性能改进",
+	"ftbchunks.minimap": "小地图",
+	"ftbchunks.minimap.enabled": "开启",
+	"ftbchunks.minimap.position": "位置",
+	"ftbchunks.minimap.position_offset_x": "位置偏移 X轴",
+	"ftbchunks.minimap.position_offset_y": "位置偏移 Y轴",
+	"ftbchunks.minimap.position_offset_condition": "位置偏移条件",
+	"ftbchunks.minimap.position.none": "无",
+	"ftbchunks.minimap.position.bottom_left": "左下角",
+	"ftbchunks.minimap.position.left": "左侧",
+	"ftbchunks.minimap.position.top_left": "左上角",
+	"ftbchunks.minimap.position.top_right": "右上角",
+	"ftbchunks.minimap.position.right": "右侧",
+	"ftbchunks.minimap.position.bottom_right": "右下角",
+	"ftbchunks.minimap.scale": "比例",
+	"ftbchunks.minimap.locked_north": "锁定北方",
+	"ftbchunks.minimap.waypoints": "路径点",
+	"ftbchunks.minimap.entities": "实体",
+	"ftbchunks.minimap.entity_heads": "实体的头",
+	"ftbchunks.minimap.player_heads": "玩家的头",
+	"ftbchunks.minimap.large_entities": "大型实体",
+	"ftbchunks.minimap.zoom": "缩放",
+	"ftbchunks.minimap.xyz": "XYZ",
+	"ftbchunks.minimap.biome": "生物群系",
+	"ftbchunks.minimap.blur_mode": "模糊模式",
+	"ftbchunks.minimap.blur_mode.auto": "自动",
+	"ftbchunks.minimap.blur_mode.on": "开",
+	"ftbchunks.minimap.blur_mode.off": "关",
+	"ftbchunks.minimap.compass": "方位",
+	"ftbchunks.minimap.visibility": "能见度",
+	"ftbchunks.minimap.zone": "Zone",
+	"sidebar_button.ftbchunks.chunks": "FTB 区块声明",
+	"key.ftbchunks.map": "打开 FTB 区块声明 地图",
+	"key.ftbchunks.minimap.zoomIn": "FTB 区块声明 小地图放大",
+	"key.ftbchunks.minimap.zoomOut": "FTB 区块声明 小地图缩小",
 	"wilderness": "野外",
-	"ftbchunks.no_server_mod": "服务器需要此Mod！",
-	"ftbchunks.already_claimed": "此区块已被%s认领",
-	"ftbchunks.gui.claimed": "已声明区块",
+	"ftbchunks.no_server_mod": "FTB 区块声明 MOD 需要在服务器安装!",
+	"ftbchunks.already_claimed": "区块已声明 by %s",
+	"ftbchunks.gui.claimed": "声明",
 	"ftbchunks.gui.force_loaded": "强制加载",
 	"ftbchunks.gui.allies": "盟友",
 	"ftbchunks.gui.ally_whitelist": "盟友白名单",
 	"ftbchunks.gui.ally_blacklist": "盟友黑名单",
 	"ftbchunks.gui.large_map": "大地图",
-	"ftbchunks.gui.claimed_chunks": "声明区块",
+	"ftbchunks.gui.claimed_chunks": "声明的区块",
 	"ftbchunks.gui.waypoints": "路径点",
 	"ftbchunks.gui.add_waypoint": "添加路径点",
 	"ftbchunks.gui.settings": "设置",
-	"ftbchunks.gui.sync": "与盟友共享地图"
+	"ftbchunks.gui.sync": "与盟友共享地图",
+	"ftbteamsconfig.ftbchunks.allow_fake_players": "允许玩家假人",
+	"ftbteamsconfig.ftbchunks.allow_explosions": "允许爆炸",
+	"ftbteamsconfig.ftbchunks.block_edit_mode": "方块编辑模式",
+	"ftbteamsconfig.ftbchunks.block_interact_mode": "方块交互模式",
+	"ftbteamsconfig.ftbchunks.minimap_mode": "小地图模式",
+	"ftbteamsconfig.ftbchunks.location_mode": "位置模式"
 }
