--- a/common/src/main/resources/assets/ftbchunks/lang/zh_cn.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/zh_cn.json
@@ -41,8 +41,8 @@
 	"ftbchunks.minimap.locked_north": "锁定北方",
 	"ftbchunks.minimap.waypoints": "路径点",
 	"ftbchunks.minimap.entities": "实体",
-	"ftbchunks.minimap.entity_heads": "实体的头",
-	"ftbchunks.minimap.player_heads": "玩家的头",
+	"ftbchunks.minimap.entity_heads": "实体图标",
+	"ftbchunks.minimap.player_heads": "玩家图标",
 	"ftbchunks.minimap.large_entities": "大型实体",
 	"ftbchunks.minimap.zoom": "缩放",
 	"ftbchunks.minimap.xyz": "XYZ",
