--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -10,6 +10,8 @@
 	"ftbchunks.own_claimed_chunks_on_map": "Show your own claimed chunks on map",
 	"ftbchunks.in_world_waypoints": "Show waypoints in world",
 	"ftbchunks.death_waypoints": "Create death waypoints on death",
+	"ftbchunks.death_waypoint_autoremove_distance": "Auto-remove deathpoint distance",
+	"ftbchunks.death_waypoint_autoremove_distance.tooltip": "If > 0, the closest deathpoint will be auto-removed if it is closer than this distance from you",
 	"ftbchunks.map_mode": "Map mode",
 	"ftbchunks.waypoint_fade_distance": "Waypoint fade distance",
 	"ftbchunks.biome_blend": "Biome blend",
@@ -61,6 +63,7 @@
 	"wilderness": "Wilderness",
 	"ftbchunks.no_server_mod": "FTB Chunks requires mod on server!",
 	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
+	"ftbchunks.deathpoint_removed": "Waypoint '%s' auto-removed",
 	"ftbchunks.gui.claimed": "Claimed",
 	"ftbchunks.gui.force_loaded": "Force loaded",
 	"ftbchunks.gui.allies": "Allies",
