feat: entity interaction protection
Allow cancelling of entity interaction (e.g. armor stands, item frames) in protected chunks.
No more stealing valuable armor off protected armor stands!

Also added entity type tag "ftbchunks:entity_interact_whitelist" (empty by default) - entity
 types on that list are exempt from protection checks

https://github.com/FTBTeam/FTB-Mods-Issues/issues/418

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -79,6 +79,7 @@
 	"ftbteamsconfig.ftbchunks.allow_explosions": "Allow Explosions",
 	"ftbteamsconfig.ftbchunks.block_edit_mode": "Block Edit Mode",
 	"ftbteamsconfig.ftbchunks.block_interact_mode": "Block Interact Mode",
+	"ftbteamsconfig.ftbchunks.entity_interact_mode": "Entity Interact Mode",
 	"ftbteamsconfig.ftbchunks.minimap_mode": "Minimap Mode",
 	"ftbteamsconfig.ftbchunks.location_mode": "Location Mode"
 }
