--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -81,5 +81,6 @@
 	"ftbteamsconfig.ftbchunks.block_interact_mode": "Block Interact Mode",
 	"ftbteamsconfig.ftbchunks.entity_interact_mode": "Entity Interact Mode",
 	"ftbteamsconfig.ftbchunks.minimap_mode": "Minimap Mode",
-	"ftbteamsconfig.ftbchunks.location_mode": "Location Mode"
+	"ftbteamsconfig.ftbchunks.location_mode": "Location Mode",
+	"ftbteamsconfig.ftbchunks.hide_claims": "Hide Claims from Unallied Players"
 }
