feat: collection of improvements to visibility of claims etc.
- Claim visibility boolean is a now privacy tri-state (public/private/allies)
  Default is public
- Added Location Mode tri-state to control player head visibility on map
  Default is public
- Claim & head visibility is now better sync'd to clients - when players join or leave a party
  or when they ally or un-ally with a party (needs new FTB Teams event)
- A fair bit of internal code cleanup around this functionality

https://github.com/FTBTeam/FTB-Mods-Issues/issues/218
https://github.com/FTBTeam/FTB-Mods-Issues/issues/64

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -82,5 +82,5 @@
 	"ftbteamsconfig.ftbchunks.entity_interact_mode": "Entity Interact Mode",
 	"ftbteamsconfig.ftbchunks.minimap_mode": "Minimap Mode",
 	"ftbteamsconfig.ftbchunks.location_mode": "Location Mode",
-	"ftbteamsconfig.ftbchunks.hide_claims": "Hide Claims from Unallied Players"
+	"ftbteamsconfig.ftbchunks.claim_visibility": "Claim Visibility"
 }
