feat: square minimaps!
Note: minimap rotation is locked when square (might change in future but needs deeper
changes to minimap texture creation)

Also fixed translation for waypoint keybind and put FTB Chunks keybinds in a chunks category

https://github.com/FTBTeam/FTB-Mods-Issues/issues/173

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -56,10 +56,13 @@
 	"ftbchunks.minimap.compass": "Compass",
 	"ftbchunks.minimap.visibility": "Visibility",
 	"ftbchunks.minimap.zone": "Zone",
+	"ftbchunks.minimap.square": "Square Minimap",
 	"sidebar_button.ftbchunks.chunks": "FTB Chunks",
-	"key.ftbchunks.map": "Open FTB Chunks Map",
-	"key.ftbchunks.minimap.zoomIn": "FTB Chunks Zoom In",
-	"key.ftbchunks.minimap.zoomOut": "FTB Chunks Zoom Out",
+	"key.categories.ftbchunks": "FTB Chunks",
+	"key.ftbchunks.map": "Open Map",
+	"key.ftbchunks.minimap.zoomIn": "Zoom In Minimap",
+	"key.ftbchunks.minimap.zoomOut": "Zoom Out Minimap",
+	"key.ftbchunks.add_waypoint": "Quick Add Waypoint",
 	"wilderness": "Wilderness",
 	"ftbchunks.no_server_mod": "FTB Chunks requires mod on server!",
 	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
