feat: add ability to track players at any distance
Track players separately from vanilla entity tracking. By default, players must be on the
same team for this to happen, but players can set their "Location Visibility" to public in
their teams settings to allow anyone to see them.

https://github.com/FTBTeam/FTB-Mods-Issues/issues/245

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -84,6 +84,6 @@
 	"ftbteamsconfig.ftbchunks.block_interact_mode": "Block Interact Mode",
 	"ftbteamsconfig.ftbchunks.entity_interact_mode": "Entity Interact Mode",
 	"ftbteamsconfig.ftbchunks.minimap_mode": "Minimap Mode",
-	"ftbteamsconfig.ftbchunks.location_mode": "Location Mode",
+	"ftbteamsconfig.ftbchunks.location_mode": "Location Visibility",
 	"ftbteamsconfig.ftbchunks.claim_visibility": "Claim Visibility"
 }
