feat: added waypoint manager gui
View all waypoints, toggle visibility, edit names & colors, remove them
Added hotkey (unbound by default) to open manager from game
Added button (replaces "Add Waypoint" on large map screen) to open gui
- waypoints should be added via right-click on map or via hotkey from game

https://github.com/FTBTeam/FTB-Mods-Issues/issues/67

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -63,6 +63,7 @@
 	"key.ftbchunks.minimap.zoomIn": "Zoom In Minimap",
 	"key.ftbchunks.minimap.zoomOut": "Zoom Out Minimap",
 	"key.ftbchunks.add_waypoint": "Quick Add Waypoint",
+	"key.ftbchunks.waypoint_manager": "Waypoint Manager",
 	"wilderness": "Wilderness",
 	"ftbchunks.no_server_mod": "FTB Chunks requires mod on server!",
 	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
@@ -74,11 +75,13 @@
 	"ftbchunks.gui.ally_blacklist": "Ally blacklist",
 	"ftbchunks.gui.large_map": "Large Map",
 	"ftbchunks.gui.claimed_chunks": "Claimed Chunks",
-	"ftbchunks.gui.waypoints": "Waypoints",
+	"ftbchunks.gui.waypoints": "Waypoint Manager",
 	"ftbchunks.gui.add_waypoint": "Add Waypoint",
 	"ftbchunks.gui.settings": "Settings",
 	"ftbchunks.gui.sync": "Share Map with Allies",
 	"ftbchunks.gui.clear_deathpoints": "Clear all Death Waypoints",
+	"ftbchunks.gui.delete_waypoint": "Delete Waypoint '%s' ?",
+	"ftbchunks.gui.change_color": "Change Color",
 	"ftbteamsconfig.ftbchunks.allow_fake_players": "Allow Fake Players",
 	"ftbteamsconfig.ftbchunks.allow_explosions": "Allow Explosions",
 	"ftbteamsconfig.ftbchunks.block_edit_mode": "Block Edit Mode",
