feat: add ability to expire force loading on a per chunk basis
Use mouse wheel on chunks in the chunk management GUI to increase/decrease
expiry time on chunks in units of hours -> days -> weeks.
Server checks all forced chunks every 10 minutes to see if expiry time has
passed and unforces them if so (but doesn't otherwise unload or unclaim them).

Also added hotkey 'C' to switch between large map and chunk mgmt map

https://github.com/FTBTeam/FTB-Mods-Issues/issues/58

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -70,6 +70,7 @@
 	"ftbchunks.deathpoint_removed": "Waypoint '%s' auto-removed",
 	"ftbchunks.gui.claimed": "Claimed",
 	"ftbchunks.gui.force_loaded": "Force loaded",
+	"ftbchunks.gui.force_load_expires": "Force loading expires",
 	"ftbchunks.gui.allies": "Allies",
 	"ftbchunks.gui.ally_whitelist": "Ally whitelist",
 	"ftbchunks.gui.ally_blacklist": "Ally blacklist",
@@ -82,6 +83,8 @@
 	"ftbchunks.gui.clear_deathpoints": "Clear all Death Waypoints",
 	"ftbchunks.gui.delete_waypoint": "Delete Waypoint '%s' ?",
 	"ftbchunks.gui.change_color": "Change Color",
+	"ftbchunks.gui.hold_alt_for_dates": "Hold Alt: show absolute times",
+	"ftbchunks.gui.mouse_wheel_expiry": "Mouse Wheel: adjust force-load expiry",
 	"ftbteamsconfig.ftbchunks.allow_fake_players": "Allow Fake Players",
 	"ftbteamsconfig.ftbchunks.allow_explosions": "Allow Explosions",
 	"ftbteamsconfig.ftbchunks.block_edit_mode": "Block Edit Mode",
