--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -79,6 +79,7 @@
 	"ftbchunks.gui.waypoints": "Waypoint Manager",
 	"ftbchunks.gui.add_waypoint": "Add Waypoint",
 	"ftbchunks.gui.settings": "Settings",
+	"ftbchunks.gui.settings.server": "Server Settings",
 	"ftbchunks.gui.sync": "Share Map with Allies",
 	"ftbchunks.gui.clear_deathpoints": "Clear all Death Waypoints",
 	"ftbchunks.gui.delete_waypoint": "Delete Waypoint '%s' ?",
@@ -94,5 +95,36 @@
 	"ftbteamsconfig.ftbchunks.entity_interact_mode": "Entity Interact Mode",
 	"ftbteamsconfig.ftbchunks.minimap_mode": "Minimap Mode",
 	"ftbteamsconfig.ftbchunks.location_mode": "Location Visibility",
-	"ftbteamsconfig.ftbchunks.claim_visibility": "Claim Visibility"
+	"ftbteamsconfig.ftbchunks.claim_visibility": "Claim Visibility",
+	"ftbchunks.fake_players": "Allow Fake Players",
+	"ftbchunks.fake_players.tooltip": "CHECK: check fake player access like any real player\nDENY: never allow fake players\nALLOW: always allow fake players",
+	"ftbchunks.max_claimed_chunks": "Max Claimed Chunks per Player",
+	"ftbchunks.max_claimed_chunks.tooltip": "This default can be overridden by the FTB Ranks 'ftbchunks.max_claimed` permission node.",
+	"ftbchunks.max_force_loaded_chunks": "Max Forcedloaded Chunks per Player",
+	"ftbchunks.max_force_loaded_chunks.tooltip": "This default can be overridden by the FTB Ranks 'ftbchunks.max_force_loaded` permission node.",
+	"ftbchunks.chunk_load_offline": "Allow Forceloading for Offline Players",
+	"ftbchunks.chunk_load_offline.tooltip": "Fallback offline chunk loading behaviour for when\n 'Forceloading Mode' is set to 'default'",
+	"ftbchunks.force_load_mode": "Forceloading Mode",
+	"ftbchunks.force_load_mode.tooltip": "NEVER: only allow chunk force-loading if the owning team has at least one online player\nALWAYS: always allow force-loading, even if no players are online\nDEFAULT: allow force-loading IF the team has at least one player with the FTB Ranks 'ftbchunks.chunk_load_offline' permission,\n OR 'Allow Forceloading for Offline Players' is true.",
+	"ftbchunks.disable_protection": "Disable Claim Protection",
+	"ftbchunks.disable_protection.tooltip": "Useful for private servers where everyone is trusted\nand claims are only used for force-loading",
+	"ftbchunks.ally_mode": "Allow Player to Change Ally Settings",
+	"ftbchunks.ally_mode.tooltip": "DEFAULT: FTB Teams ally status is checked to decide if players are allied\nFORCED_ALL: all players are always considered to be allied\nFORCED_NONE: no players are ever considered to be allied",
+	"ftbchunks.claim_dimension_blacklist": "Dimension Blacklist",
+	"ftbchunks.claim_dimension_blacklist.tooltip": "Blacklist for dimension ID's where chunks can't be claimed.\nE.g. add \"minecraft:the_end\" to this list if you want to disable chunk claiming in The End",
+	"ftbchunks.no_wilderness": "Protect Unclaimed Regions",
+	"ftbchunks.no_wilderness.tooltip": "If true, chunks must be claimed before they can be built on",
+	"ftbchunks.force_disable_minimap": "Disable Minimap for Clients",
+	"ftbchunks.max_idle_days_before_unclaim": "Max Idle Days Before Unclaim",
+	"ftbchunks.max_idle_days_before_unclaim.tooltip": "If no team member logs in for this many days,\nthe team's claims will be released.\nSetting this to 0 disables auto-unclaiming.",
+	"ftbchunks.long_range_tracker_interval": "Long Range Player Tracker Interval",
+	"ftbchunks.long_range_tracker_interval.tooltip": "Interval in ticks to send updates to clients with long-range player tracking data.\nLower values mean more frequent updates but more server load and network traffic;\n be careful with this, especially on busy servers.\nSetting this to 0 disables long-range tracking.",
+	"ftbchunks.protect_unknown_explosions": "Prevent Explosions from Unknown Sources",
+	"ftbchunks.protect_unknown_explosions.tooltip": "Some explosion sources (e.g. Ghasts) can't be determined in code.\nIf this setting is true, damage from these explosion is prevented in protected chunks.",
+	"ftbchunks.hard_team_claim_limit": "Hard Max Team Claim Limit",
+	"ftbchunks.hard_team_claim_limit.tooltip": "Hard claim limit for party teams,\n regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
+	"ftbchunks.hard_team_force_limit": "Hard Max Team Forceload Limit",
+	"ftbchunks.hard_team_force_limit.tooltip": "Hard force-load limit for party teams,\n regardless of member count or Party Limit Calculation mode.\nDefault of 0 means no hard limit.",
+	"ftbchunks.party_limit_mode": "Party Limit Calculation Mode",
+	"ftbchunks.party_limit_mode.tooltip": "Method by which party claim & force-load limits are calculated.\nLARGEST: use the limits of the member with the largest limits\nSUM: add up all the members' limits\nOWNER: use the party owner's limits only\nAVERAGE: use the average of all members' limits."
 }
