feat: added optional gamestage requirement
"require_game_stage" server config setting, defaults to false
If true, players need the "ftbchunks_mapping" game stage to be able
to open the map or see the minimap

KubeJS and/or Gamestages are required to support this

https://github.com/FTBTeam/FTB-Mods-Issues/issues/580

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -124,5 +124,7 @@
 	"ftbchunks.hard_team_force_limit": "Hard Max Team Forceload Limit",
 	"ftbchunks.hard_team_force_limit.tooltip": "Hard forceload limit for party teams,\n regardless of member count or Party Limit Calculation mode",
 	"ftbchunks.party_limit_mode": "Party Limit Calculation Mode",
-	"ftbchunks.party_limit_mode.tooltip": "Method by which party claim & force-load limits are calculated.\nLARGEST: use the limits of the member with the largest limits\nSUM: add up all the members' limits\nOWNER: use the party owner's limits only\nAVERAGE: use the average of all members' limits."
+	"ftbchunks.party_limit_mode.tooltip": "Method by which party claim & force-load limits are calculated.\nLARGEST: use the limits of the member with the largest limits\nSUM: add up all the members' limits\nOWNER: use the party owner's limits only\nAVERAGE: use the average of all members' limits.",
+	"ftbchunks.require_game_stage": "Require Game Stage for Mapping",
+	"ftbchunks.require_game_stage.tooltip": "If true, players must have the 'ftbchunks_mapping' game stage (KubeJS and/or Gamestages required) to be able to open the map or see the minimap"
 }
