fix: better fake player handling
Added new team properties "Allied Fake Player Names/IDs" (default: empty)
and "Allow Fake Players by Player ID" (default: true)
Rename "Allow Fake Players" to "Allow All Fake Players", make it false
by default

https://github.com/FTBTeam/FTB-Mods-Issues/issues/605

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -88,14 +88,25 @@
 	"ftbchunks.gui.mouse_wheel_expiry": "Mouse Wheel: adjust force-load expiry",
 	"ftbchunks.gui.teleport": "Teleport",
 	"ftbteamsconfig.ftbchunks": "FTB Chunks Properties",
-	"ftbteamsconfig.ftbchunks.allow_fake_players": "Allow Fake Players",
+	"ftbteamsconfig.ftbchunks.allow_fake_players": "Allow All Fake Players",
+	"ftbteamsconfig.ftbchunks.allow_fake_players.tooltip": "Treat ALL fake players as allies of the team.\nWARNING: Setting this to true could allow hostile players to access your claims via any fake player. Set this to false if you're unsure.",
+	"ftbteamsconfig.ftbchunks.allow_named_fake_players": "Allied Fake Player Names/IDs",
+	"ftbteamsconfig.ftbchunks.allow_named_fake_players.tooltip": "Treat these fake players as allies of the team.\nWARNING: Adding entries here could allow hostile players to access your claims via those fake players. Leave this empty if you're unsure.",
+	"ftbteamsconfig.ftbchunks.allow_fake_players_by_id": "Allow Fake Players by Player ID",
+	"ftbteamsconfig.ftbchunks.allow_fake_players_by_id.tooltip": "Allows fake players which have the ID of a real player access to your claims, IF that real player would be permitted, either as ally or team member. Set this to true if you're unsure.",
 	"ftbteamsconfig.ftbchunks.allow_explosions": "Allow Explosions",
+	"ftbteamsconfig.ftbchunks.allow_explosions.tooltip": "Should explosions be able to damage blocks in claimed areas?",
 	"ftbteamsconfig.ftbchunks.block_edit_mode": "Block Edit Mode",
+	"ftbteamsconfig.ftbchunks.block_edit_mode.tooltip": "Used when blocks are being placed or broken",
 	"ftbteamsconfig.ftbchunks.block_interact_mode": "Block Interact Mode",
+	"ftbteamsconfig.ftbchunks.block_interact_mode.tooltip": "Used when blocks are right-clicked, e.g. opening a chest or flipping a lever",
 	"ftbteamsconfig.ftbchunks.entity_interact_mode": "Entity Interact Mode",
+	"ftbteamsconfig.ftbchunks.entity_interact_mode.tooltip": "Used when entities are right-clicked",
 	"ftbteamsconfig.ftbchunks.minimap_mode": "Minimap Mode",
 	"ftbteamsconfig.ftbchunks.location_mode": "Location Visibility",
+	"ftbteamsconfig.ftbchunks.location_mode.tooltip": "Controls who can see you on the map or minimap (outside the normal vanilla tracking range)",
 	"ftbteamsconfig.ftbchunks.claim_visibility": "Claim Visibility",
+	"ftbteamsconfig.ftbchunks.claim_visibility.tooltip": "Controls who can see your claims on the map or minimap",
 	"ftbchunks.fake_players": "Allow Fake Players",
 	"ftbchunks.fake_players.tooltip": "CHECK: check fake player access like any real player\nDENY: never allow fake players\nALLOW: always allow fake players",
 	"ftbchunks.max_claimed_chunks": "Max Claimed Chunks per Player",
