--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -13,7 +13,8 @@
 	"ftbchunks.death_waypoint_autoremove_distance": "Auto-remove deathpoint distance",
 	"ftbchunks.death_waypoint_autoremove_distance.tooltip": "If > 0, the closest deathpoint will be auto-removed if it is closer than this distance from you",
 	"ftbchunks.map_mode": "Map mode",
-	"ftbchunks.waypoint_fade_distance": "Waypoint fade distance",
+	"ftbchunks.waypoint_fade_distance": "Waypoint beacon fade distance",
+	"ftbchunks.waypoint_dot_fade_distance": "Waypoint dot fade distance",
 	"ftbchunks.biome_blend": "Biome blend",
 	"ftbchunks.biome_blend.none": "None (Fastest)",
 	"ftbchunks.biome_blend.blend_3x3": "Blend 3x3",
