--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -13,6 +13,7 @@
 	"ftbchunks.death_waypoint_autoremove_distance": "Auto-remove deathpoint distance",
 	"ftbchunks.death_waypoint_autoremove_distance.tooltip": "If > 0, the closest deathpoint will be auto-removed if it is closer than this distance from you",
 	"ftbchunks.map_mode": "Map mode",
+	"ftbchunks.zoom_warning": "Max zoom-out limited due to memory constraints",
 	"ftbchunks.waypoint_fade_distance": "Waypoint beacon fade distance",
 	"ftbchunks.waypoint_dot_fade_distance": "Waypoint dot fade distance",
 	"ftbchunks.biome_blend": "Biome blend",
@@ -27,6 +28,7 @@
 	"ftbchunks.water_height_factor": "Water weight factor",
 	"ftbchunks.only_surface_entities": "Only surface entities",
 	"ftbchunks.experimental_performance_improvement": "Experimental performance improvement",
+	"ftbchunks.memory": "Memory Usage",
 	"ftbchunks.minimap": "Minimap",
 	"ftbchunks.minimap.enabled": "Enabled",
 	"ftbchunks.minimap.position": "Position",
@@ -144,5 +146,11 @@
 	"ftbchunks.party_limit_mode": "Party Limit Calculation Mode",
 	"ftbchunks.party_limit_mode.tooltip": "Method by which party claim & force-load limits are calculated.\nLARGEST: use the limits of the member with the largest limits\nSUM: add up all the members' limits\nOWNER: use the party owner's limits only\nAVERAGE: use the average of all members' limits.",
 	"ftbchunks.require_game_stage": "Require Game Stage for Mapping",
-	"ftbchunks.require_game_stage.tooltip": "If true, players must have the 'ftbchunks_mapping' game stage (KubeJS and/or Gamestages required) to be able to open the map or see the minimap"
+	"ftbchunks.require_game_stage.tooltip": "If true, players must have the 'ftbchunks_mapping' game stage (KubeJS and/or Gamestages required) to be able to open the map or see the minimap",
+	"ftbchunks.memory.region_release_time": "Idle region release timeout",
+	"ftbchunks.memory.region_release_time.tooltip": "Timeout in seconds to release data for 512x512 regions which haven't been accessed recently\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
+	"ftbchunks.memory.autorelease_on_map_close": "Autorelease regions on map close",
+	"ftbchunks.memory.autorelease_on_map_close.tooltip": "When the large map is closed, auto-release region data down to this number.\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
+	"ftbchunks.memory.max_zoom_constraint": "Constrain map zoom-out",
+	"ftbchunks.memory.max_zoom_constraint.tooltip": "When true, max map zoom-out is limited by the number of explored regions and amount of available memory.\nIf this is bothersome, set this to false."
 }
