feat: improved in-world waypoint dots
No longer arbitrarily limited in distance, now controlled by new
"waypoint_max_distance" config

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -14,8 +14,9 @@
 	"ftbchunks.death_waypoint_autoremove_distance.tooltip": "If > 0, the closest deathpoint will be auto-removed if it is closer than this distance from you",
 	"ftbchunks.map_mode": "Map mode",
 	"ftbchunks.zoom_warning": "Max zoom-out limited due to memory constraints",
-	"ftbchunks.waypoint_fade_distance": "Waypoint beacon fade distance",
-	"ftbchunks.waypoint_dot_fade_distance": "Waypoint dot fade distance",
+	"ftbchunks.waypoint_fade_distance": "Waypoint beacons: min fade distance",
+	"ftbchunks.waypoint_dot_fade_distance": "Waypoint dots: min fade distance",
+	"ftbchunks.waypoint_max_distance": "Waypoints: max draw distance",
 	"ftbchunks.biome_blend": "Biome blend",
 	"ftbchunks.biome_blend.none": "None (Fastest)",
 	"ftbchunks.biome_blend.blend_3x3": "Blend 3x3",
