chore: add "Max Zoom Constraint" to client memory usage config
True by default, can be set to false to ignore constraints.

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -158,5 +158,7 @@
 	"ftbchunks.memory.region_release_time": "Idle region release timeout",
 	"ftbchunks.memory.region_release_time.tooltip": "Timeout in seconds to release data for 512x512 regions which haven't been accessed recently\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
 	"ftbchunks.memory.autorelease_on_map_close": "Autorelease regions on map close",
-	"ftbchunks.memory.autorelease_on_map_close.tooltip": "When the large map is closed, auto-release region data down to this number.\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data."
+	"ftbchunks.memory.autorelease_on_map_close.tooltip": "When the large map is closed, auto-release region data down to this number.\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
+	"ftbchunks.memory.max_zoom_constraint": "Constrain map zoom-out",
+	"ftbchunks.memory.max_zoom_constraint.tooltip": "When true, max map zoom-out is limited by the number of explored regions and amount of available memory.\nIf this is bothersome, set this to false."
 }
