feat: better dimension whitelisting & blacklisting
Separate whitelist and blacklist config settings now. Dimension must not be in
blacklist, and (if whitelist non-empty) must be in whitelist.

Wildcards can be used now, e.g. `somemod:*` matches all dimensions added by the
mod "somemod".

Also, send an update packet after player tries to modify any chunk claims or
forceloads, indicating number of chunks changed and any problems seen. Result
is displayed in the chunk editing GUI for a few seconds.

https://github.com/FTBTeam/FTB-Mods-Issues/issues/554

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -160,5 +160,14 @@
 	"ftbchunks.memory.autorelease_on_map_close": "Autorelease regions on map close",
 	"ftbchunks.memory.autorelease_on_map_close.tooltip": "When the large map is closed, auto-release region data down to this number.\nSmaller values mean less memory usage, but more disk access as released regions are reloaded\nSet to 0 to disable releasing of region data.",
 	"ftbchunks.memory.max_zoom_constraint": "Constrain map zoom-out",
-	"ftbchunks.memory.max_zoom_constraint.tooltip": "When true, max map zoom-out is limited by the number of explored regions and amount of available memory.\nIf this is bothersome, set this to false."
+	"ftbchunks.memory.max_zoom_constraint.tooltip": "When true, max map zoom-out is limited by the number of explored regions and amount of available memory.\nIf this is bothersome, set this to false.",
+	"ftbchunks.claim_result": "Chunks modified: %d / %d",
+	"ftbchunks.claim_result.other": "Unknown issues",
+	"ftbchunks.claim_result.not_owner": "Not the chunk owner",
+	"ftbchunks.claim_result.not_enough_power": "Claim/forceload limit reached",
+	"ftbchunks.claim_result.already_claimed": "Chunk already claimed",
+	"ftbchunks.claim_result.dimension_forbidden": "Claiming forbidden in this dimension",
+	"ftbchunks.claim_result.not_claimed": "Chunk not claimed",
+	"ftbchunks.claim_result.already_loaded": "Chunk already loaded",
+	"ftbchunks.claim_result.not_loaded": "Chunk not loaded"
 }
